# trifunctors

./: .gitignore  LICENCE.txt  README.md  multifunctors.cabal  trifunctors.cabal
Data/: Either3.hs  Quadrifoldable.hs  Quadrifunctor.hs  Quadritraversable.hs  Trifoldable.hs  Trifunctor.hs  Tritraversable.hs
Data/Data/Trifunctor/: Rotate.hs
Data/Trifunctor/: Join.hs  Product.hs  Rotate.hs  Sum.hs  Trifff.hs  Tritannen.hs
