name:           trifunctors
version:        1
category:       Data
synopsis:       Functors over three parameters
license:        BSD3
license-file:   LICENCE.txt

author:         Andy Morris
maintainer:     Andy Morris <hello@andy-morris.xyz>

cabal-version:  >= 1.10
build-type:     Simple
tested-with:    GHC == 7.10.2

homepage: https://andy-morris.github.io/trifunctors
bug-reports: https://github.com/andy-morris/trifunctors/issues

source-repository head
  type:     git
  location: git://github.com/andy-morris/trifunctors.git

library
  hs-source-dirs:     .
  default-language:   Haskell2010
  default-extensions: UnicodeSyntax
  other-extensions:   DeriveGeneric, DeriveTraversable, TemplateHaskell
  ghc-options:        -Wall
  exposed-modules:    Data.Trifunctor,
                      Data.Trifoldable,
                      Data.Tritraversable
  build-depends:      base >= 4.8 && < 4.9,
                      bifunctors >= 5.1
