name:           trifunctors
version:        1
category:       Data
synopsis:       Functors over three parameters
description:
  Provides classes @Trifunctor@, @Trifoldable@, and @Tritraversable@, in the
  same pattern as 'Data.Functor.Functor' and 'Data.Bifunctor.Bifunctor' from
  @base@.
  .
  This package also contains the ternary @Either3@, mostly as an example
  trifunctor and dual to @(,,)@.
license:        BSD3
license-file:   LICENCE.txt

author:         Andy Morris
maintainer:     Andy Morris <hello@andy-morris.xyz>

cabal-version:  >= 1.10
build-type:     Simple
tested-with:    GHC == 7.10.2, GHC == 8.0.1

homepage:    https://github.com/andy-morris/trifunctors
bug-reports: https://github.com/andy-morris/trifunctors/issues

source-repository head
  type:     git
  location: git://github.com/andy-morris/trifunctors.git

library
  hs-source-dirs:     .
  default-language:   Haskell2010
  default-extensions: UnicodeSyntax
  other-extensions:   DeriveGeneric, DeriveTraversable, TemplateHaskell
  ghc-options:        -Wall
  exposed-modules:    Data.Trifunctor,
                      Data.Trifoldable,
                      Data.Tritraversable
  build-depends:      base >= 4.8 && < 4.10,
                      bifunctors >= 5.1
